fix footer alignment issue (NOT in textbook, change if it gives solution later on

--- a/gtmoviestore/static/css/style.css
+++ b/gtmoviestore/static/css/style.css
@@ -1,3 +1,14 @@
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  flex: 1 0 auto;
+}
+/* ABOVE IS FIX FOR FOOTER ALIGNMENT */
+
 .bg-index{
   background: url("/static/img/background.jpg") no-repeat fixed;
   background-size: 100% auto;
